# davidjameshowell-blog

./: .dockerignore  Dockerfile-flyio  app.py  app_requirements.txt  deploy_blog_post.py  fly.toml  pyproject.toml  zappa_requirements.txt  zappa_settings.json
.github/workflows/: build_and_update_dev.yaml  build_and_update_production.yaml
blog_db/: blog.db
posts/: digital-ocean-kubernetes-challenge-12-2021.md  driving-with-uber-eats-door-dash.md  everyplate-simple-and-fast.md  gaming-rig-in-a-closet.md  goorm-ide-how-i-look-at-code-now.md  guides-and-manual-master-list.md  save-with-david-app-and-sites.md
scripts/: bootstrap.sh  build.sh  refresh_blog_posts.sh  update.sh
templates/: about.html  base.html  contact.html  list_posts.html  posts.html
