[tool.poetry]
name = "pm-service-account-rotate"
version = "0.1.0"
description = ""
authors = ["David Howell <david@davidjameshowell.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.1.8"
Flask = "^2.0.1"
environs = "^9.3.3"
wheel = "^0.37.0"
Flask-SQLAlchemy = "^2.5.1"
mistune = "^2.0.0a4"
zappa = "^0.54.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
